--- a/vector_store_sdk/pyproject.toml
+++ b/vector_store_sdk/pyproject.toml
@@ -16,3 +16,21 @@ build-backend = "setuptools.build_meta"
 filterwarnings = [
     "ignore::pydantic.PydanticDeprecatedSince20"
 ]
+[project.optional-dependencies]
+dev = ["black", "ruff"]
+
+[tool.black]
+line-length = 88
+target-version = ["py310"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py310"
+extend-exclude = ["vector_store_sdk/vectorstore_client.egg-info"]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP"]
+ignore = ["E501", "F811"]
+
+[tool.ruff.format]
+quote-style = "double"
