--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,19 +5,33 @@ description = "vectordb API"
 authors = [{name = "Manu"}]
 requires-python = ">=3.8"
 dependencies = [
+    "fastapi",
+    "uvicorn",
+    "cohere",
+    "numpy",
+    "python-dotenv",
+    "pydantic>=2.0",
     "requests",
-    "pydantic>=2.0"
+    "pytest"
 ]
+
+[project.optional-dependencies]
+dev = ["black", "ruff", "pre-commit"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["vector_store"]
+
+[tool.setuptools.package-dir]
+"" = "."
+
 [tool.pytest.ini_options]
 filterwarnings = [
     "ignore::pydantic.PydanticDeprecatedSince20"
 ]
-[project.optional-dependencies]
-dev = ["black", "ruff"]
 
 [tool.black]
 line-length = 88
