--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "python-dotenv",
     "pydantic>=2.0",
     "requests",
-    "pytest"
+    "pytest",
+    "sqlalchemy",
 ]
 
 [project.optional-dependencies]
