--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "requests",
     "pytest",
     "sqlalchemy",
+    "cachetools",
 ]
 
 [project.optional-dependencies]
@@ -23,8 +24,9 @@ dev = ["black", "ruff", "pre-commit"]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-packages = ["vector_store"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["vector_store*"]
 
 [tool.setuptools.package-dir]
 "" = "."
