--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ extend-exclude = ["vector_store_sdk/vectorstore_client.egg-info"]
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B", "UP"]
-ignore = ["E501", "F811"]
+ignore = ["E501", "F811", "B008"]
 
 [tool.ruff.format]
 quote-style = "double"
